<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/input_old_pass"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/input_new_pass"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <EditText
        android:id="@+id/edtNewPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/input_new_pass_again"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <TextView
        android:id="@+id/txtError"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_red_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_pass" />

</LinearLayout>
